# liblog

./: README.md  build.sh  configure.ac  copy2release.sh  export.def  liblog.sln  liblog.vcxproj  log.ini
inc/: log.h
sample/: build.sh
sample/log-client/: log-client.c  log-client.vcxproj
sample/log-thread/: log-thread.c  log-thread.vcxproj
src/: Makefile.am  inotify_file_monitor.c  log.c  win32_file_monitor.c
